tests/snapshots/cli__new_print_with_invalid_template_leaves_no_stray_file.snap
---
source: tests/cli.rs
info:
  program: ntropy
  args:
    - new
    - Hello World
    - "--print"
  env:
    EDITOR: "true"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: while creating the note: the frontmatter has no `title` field
