tests/snapshots/cli__new_yaml_special_title.snap
---
source: tests/cli.rs
info:
  program: ntropy
  args:
    - new
    - "Q3: Planning kickoff"
    - "--no-edit"
  env:
    EDITOR: "true"
---
success: true
exit_code: 0
----- stdout -----
[VAULT]/all-notes/[ULID....................]-q3-planning-kickoff.md

----- stderr -----
