tests/snapshots/cli__print_content_emits_the_note_itself.snap
---
source: tests/cli.rs
info:
  program: ntropy
  args:
    - "-n"
    - search
    - "-P"
    - 01ARZ3NDEKTSV4RRFFQ69G5FAV
  env:
    EDITOR: "true"
---
success: true
exit_code: 0
----- stdout -----
---
title: A
tags: [work]
---
body line

----- stderr -----
