tests/snapshots/cli__query_parse_error_is_reported.snap
---
source: tests/cli.rs
info:
  program: ntropy
  args:
    - "--vault"
    - /var/folders/sy/j_tvsf5n5g3055p026gwzw1c0000gn/T/.tmpvyAFI1
    - search
    - "tag:"
    - "-n"
  env:
    EDITOR: "true"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: while searching: query syntax error at position 4: expected a value after `:`
