tests/snapshots/cli__reconcile_rewrites_stale_link_targets.snap
---
source: tests/cli.rs
info:
  program: ntropy
  args:
    - reconcile
  env:
    EDITOR: "true"
---
success: true
exit_code: 0
----- stdout -----
Reconciling vault at [VAULT]...
relinked [ULID]-old.md -> [ULID]-target.md in [ULID]-source.md
ignored /by-tag/
Scanned 2 notes, renamed 0 files, relinked 1 link, rebuilt 1 view, ignored 1 entry, unignored 0 entries, 0 warnings.

----- stderr -----
