tests/snapshots/cli__render_bare_empty_vault_errors.snap
---
source: tests/cli.rs
info:
  program: ntropy
  args:
    - render
    - "-n"
  env:
    EDITOR: "true"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
No notes matched your search criteria.
